--- a/manifests/tomcat/tomcat-service.yaml
+++ b/manifests/tomcat/tomcat-service.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tomcat-service
-  namespace: jhhan
 spec:
+  type: NodePort
   selector:
     app: tomcat
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
-  type: NodePort
+    - port: 80
+      targetPort: 8080
+      nodePort: 30080
