--- a/manifests/tomcat/tomcat-deployment.yaml
+++ b/manifests/tomcat/tomcat-deployment.yaml
@@ -18,3 +18,36 @@ spec:
         image: tomcat:9.0
         ports:
         - containerPort: 8080
+        volumeMounts:
+        - name: html-volume
+          mountPath: /usr/local/tomcat/webapps/ROOT/hello.html
+          subPath: hello.html
+      volumes:
+      - name: html-volume
+        configMap:
+          name: hello-config
+
+
+
+
+# 기존 deloyment.yaml
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: tomcat
+#  namespace: jhhan
+#spec:
+#  replicas: 1
+#  selector:
+#    matchLabels:
+#      app: tomcat
+#  template:
+#    metadata:
+#      labels:
+#        app: tomcat
+#    spec:
+#      containers:
+#      - name: tomcat
+#        image: tomcat:9.0
+#        ports:
+#        - containerPort: 8080
