--- a/manifests/tomcat/tomcat-deployment.yaml
+++ b/manifests/tomcat/tomcat-deployment.yaml
@@ -25,7 +25,7 @@ spec:
       volumes:
       - name: html-volume
         configMap:
-          name: hello-config
+          name: hello-html
 
 
 
