--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Generate ConfigMap from HTML
+      - name: Generate ConfigMap YAML from HTML
         run: |
           mkdir -p manifests/tomcat
           {
@@ -29,7 +29,7 @@ jobs:
             sed 's/^/    /' application/hello.html
           } > manifests/tomcat/hello-configmap.yaml
 
-      - name: Commit & Push
+      - name: Commit and Push if Changed
         run: |
           git config user.name "jhhan-github-actions"
           git config user.email "jhhan-actions@github.com"
